This file documents the revision history for the Mod-Gearman-Worker-Go

1.2.4    Tue Sep 27 10:38:12 CEST 2022
          - improve worker error output

1.2.3    Tue Sep 27 10:38:12 CEST 2022
          - adjust memory default threshold to 70%
          - add load_cpu_multi option to set load based on number of CPUs (default 1.5)
          - add support for conf.d folder. --config=folder will read .cfg/.conf files recursively

1.2.2    Fri Aug 26 11:39:55 CEST 2022
          - fix checking memory threshold

1.2.1    Wed Aug 10 15:05:24 CEST 2022
          - fix crash if gearmand is unavailable

1.2.0    Wed Aug  3 10:00:30 CEST 2022
          - add sink-rate option to set rate at which idle workers will decay
          - add mem_limit (in percent) to set a threshold of used memory after which no worker will be spawned
          - add backgrounding-threshold option to set amount of seconds after
            which a worker will background the current executed plugin and work on the next job.
          - use shared queue to send results back which saves one connection per worker thread

1.1.6    Mon Jul  4 09:07:29 CEST 2022
          - log max open files on startup
          - automatically adjust maxWorker setting if open files ulimit is to low
          - fix potential race condition during reload while long running plugins are active

1.1.5    Thu Jun 10 19:57:11 CEST 2021
          - cleanup thread dump output

1.1.4    Mon Dec 14 10:49:01 CET 2020
          - improve dupserver connection handling
          - improve shutdown

1.1.3    Mon Oct 31 14:54:20 CEST 2019
          - fix null pointer exception on timeouts

1.1.2    Thu Oct 17 18:09:15 CEST 2019
          - maintainance release

1.1.1    Fri Mar 29 17:32:35 CET 2019
          - maintainance release

1.1.0    Fri Feb  1 16:20:01 CET 2019
          - improve pid file handling
          - remove pid file on panics

1.0.9    Fri Feb  1 15:21:17 CET 2019
          - fix reconnecting to gearmand